# skunk

./: README.md  skunk.cabal
examples/: example.skunk  html.skunk
src/: Eval.hs  Main.hs  Syntax.hs
