cabal-version:      2.4
name:               skunk
version:            0.1.0.0

extra-source-files:
    README.md

executable skunk
    main-is:          Main.hs

    other-modules:    Syntax
                    , Eval

    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
